--- a/tests/Makefile
+++ b/tests/Makefile
@@ -34,6 +34,10 @@ test-behavior: build
 test-docker: build
 	$(RUN) test-docker
 
+# run tests for Kubernetes
+test-kubernetes: build-x86_64
+	$(RUN) test-kubernetes
+
 # checks
 
 check: check-code check-fmt check-style check-markdown check-generate check-blog check-version check-examples check-component-features
