--- a/.dockerignore
+++ b/.dockerignore
@@ -3,3 +3,4 @@
 !scripts/Gemfile.lock
 !scripts/ci-docker-images/verifier-nixos/Gemfile
 !rust-toolchain
+!target/x86_64-unknown-linux-musl/debug/vector
