feat(new transform): New `filter` transform (#2088)
* Initial implementation of new `filter` transform

Signed-off-by: Bruce Guenter <bruce@timber.io>

* Add support for filtering on log/metric event type

This was already in the documentation, mostly.

Signed-off-by: Bruce Guenter <bruce@timber.io>

* Merge common condition configuration enums

Signed-off-by: Bruce Guenter <bruce@timber.io>

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -59,6 +59,7 @@
 /src/transforms/add_tags.rs @lukesteensen
 /src/transforms/ansi_stripper.rs @lukesteensen
 /src/transforms/coercer.rs @bruceg
+/src/transforms/filter.rs @bruceg
 /src/transforms/field_filter.rs @lukesteensen
 /src/transforms/geoip.rs @lukesteensen
 /src/transforms/grok_parser.rs @lukesteensen
