--- a/tests/behavior/transforms/regex_parser.toml
+++ b/tests/behavior/transforms/regex_parser.toml
@@ -14,3 +14,21 @@
       "timestamp.equals" = "2020-01-01T12:34:56Z"
       "level.equals" = "INFO"
       "message.equals" = "hello"
+
+[transforms.regex_parser_target]
+  inputs = []
+  type = "regex_parser"
+  regex = "^(?P<timestamp>[\\w\\-:\\+]+) (?P<level>\\w+) (?P<message>.*)$"
+  target_field = "something"
+[[tests]]
+  name = "regex_parser_target"
+  [tests.input]
+    insert_at = "regex_parser_target"
+    type = "raw"
+    value = "2020-01-01T12:34:56Z INFO hello"
+  [[tests.outputs]]
+    extract_from = "regex_parser_target"
+    [[tests.outputs.conditions]]
+      "something.timestamp.equals" = "2020-01-01T12:34:56Z"
+      "something.level.equals" = "INFO"
+      "something.message.equals" = "hello"
