--- a/.meta/links.toml
+++ b/.meta/links.toml
@@ -260,6 +260,7 @@ strptime_specifiers = "https://docs.rs/chrono/0.4.11/chrono/format/strftime/inde
 syslog = "https://en.wikipedia.org/wiki/Syslog"
 syslog_3164 = "https://tools.ietf.org/html/rfc3164"
 syslog_5424 = "https://tools.ietf.org/html/rfc5424"
+syslog_6587 = "https://tools.ietf.org/html/rfc6587"
 systemd = "https://systemd.io/"
 systemd_limit_resources = "https://www.freedesktop.org/software/systemd/man/systemd.resource-control.html"
 tcp = "https://en.wikipedia.org/wiki/Transmission_Control_Protocol"
